--- a/rebar.config
+++ b/rebar.config
@@ -65,5 +65,5 @@
     {in_files, [
         "reports.thrift"
     ]},
-    {gen, "erlang:app_prefix=ff_reporter,scoped_typenames"}
+    {gen, "erlang:app_prefix=reporter,scoped_typenames"}
 ]}.
